GDAPT-45 Cree l'insertion de mouvement de stock d'un produit leur de ajouter ou modifier un produit